--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.c6cc00ca.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.0467ffd5.js">
-    <link rel="stylesheet" href="/assets/index.28c04e10.css">
+    <title>Propell Analytics</title>
+    <script type="module" crossorigin src="/assets/index.3841ee4d.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.874f9cd2.js">
+    <link rel="stylesheet" href="/assets/index.6a4ef408.css">
   </head>
   <body>
     <div id="app"></div>
