--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Propell Analytics</title>
-    <script type="module" crossorigin src="/assets/index.30878362.js"></script>
+    <script type="module" crossorigin src="/assets/index.c9dce8d5.js"></script>
     <link rel="modulepreload" href="/assets/vendor.7bcb1fda.js">
-    <link rel="stylesheet" href="/assets/index.1fa9a144.css">
+    <link rel="stylesheet" href="/assets/index.96895fd5.css">
   </head>
   <body>
     <div id="app"></div>
