--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
     <title>Propell Analytics</title>
-    <script type="module" crossorigin src="/assets/index.c9eb9f54.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.c3cd7fcc.js">
-    <link rel="stylesheet" href="/assets/index.9e6fc2bb.css">
+    <script type="module" crossorigin src="/assets/index.2ff26b63.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.5825258f.js">
+    <link rel="stylesheet" href="/assets/index.aef2bfae.css">
   </head>
   <body>
     <div id="app"></div>
